Fixed issue when a file is in the www directory Last update till I move over to automatic subdomain management with dnsmasq which will prevent the need to edit the hostfile and creating vhosts on from the site

--- a/assets/style.css
+++ b/assets/style.css
@@ -106,3 +106,13 @@ body{
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
+.side-input{
+	width: 100%;
+	vertical-align: middle;
+	text-align: center;
+}
+.side-input input{
+	margin: 5px 0px;
+	padding: 5px 5px;
+	width: 90%;
+}
